--- a/django.yaml
+++ b/django.yaml
@@ -20,7 +20,7 @@ spec:
     
       containers:
 
-      - image: prima/filebeat:v5.6
+      - image: 192.168.1.5:5000/filebeat:v5.6.9
         name: filebeat
         volumeMounts:
         - name: app-logs
