--- a/django.yaml
+++ b/django.yaml
@@ -30,6 +30,7 @@ spec:
 
 
       - name: django-app
+        imagePullPolicy: Always
         image: 192.168.1.5:5000/starter:v0.0.1
         ports:
         - containerPort: 8000
