--- a/kong/dockerfile
+++ b/kong/dockerfile
@@ -7,7 +7,7 @@ RUN yum install -y wget https://bintray.com/kong/kong-community-edition-rpm/down
     yum clean all
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
-ENTRYPOINT ["/docker-entrypoint.sh"]
+ENTRYPOINT ["/bin/sh", "/docker-entrypoint.sh"]
 
 EXPOSE 8000 8443 8001 8444
 
