--- a/drone/docker-compose.yaml
+++ b/drone/docker-compose.yaml
@@ -5,18 +5,19 @@ services:
     image: drone/drone:0.8
 
     ports:
-      - 80:8000
+      - 8101:8000
       - 9000
     volumes:
       - /var/lib/drone:/var/lib/drone/
     restart: always
     environment:
       - DRONE_OPEN=true
-      - DRONE_HOST="192.168.1.5"
-      - DRONE_GITEA=true
-      - DRONE_GITEA_URL=https://gitee.com
-      - DRONE_GITEA_GIT_USERNAME="602068971@qq.com"
-      - DRONE_GITEA_GIT_PASSWORD="zw19881205"
+      - DRONE_HOST="http://127.0.0.1"
+      - DRONE_GOGS=true
+      - DRONE_GOGS_URL=http://192.168.1.5:10080/
+      - DRONE_GOGS_GIT_USERNAME="spwx"
+      - DRONE_GOGS_GIT_PASSWORD="spwx"
+      - DRONE_GOGS_PRIVATE_MODE=true
       - DRONE_SECRET="DRONE_SECRETDRONE_SECRET"
 
 
