--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -15,3 +15,12 @@ scrape_configs:
     scrape_interval: 8s
     static_configs:
       - targets: ['192.168.1.5:9100', '192.168.1.101:9100']
+
+  - job_name: 'kong'
+    scrape_interval: 8s
+    static_configs:
+      - targets: ['192.168.1.5:8999']
+
+
+
+      
