--- a/kong/docker-compose.yml
+++ b/kong/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - KONG_ADMIN_ACCESS_LOG=/dev/stdout
       - KONG_PROXY_ERROR_LOG=/dev/stderr
       - KONG_ADMIN_ERROR_LOG=/dev/stderr
+      - KONG_ANONYMOUS_REPORTS=off
     expose:
       - 8000
       - 8001
